tests/NormalTests/paczka1/fuzzy1/40650220.err
Error in line 4: 7BRUSVI5oSi A550 42,8
Error in line 12: 7BRUSVI5oSi S671 41,5
Error in line 24: DG9lUhMo4Cd A488 85,5
Error in line 25: A550 A488 20,8
Error in line 30: 3dIGTf6d S671 23,1
Error in line 34: 3dIGTf6d S30 9,9
